# Codex-Native

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish-aur.yml  sync-upstream-frontend.yml
crates/codex-archive/: Cargo.toml
crates/codex-archive/src/: lib.rs
crates/codex-native/: Cargo.toml
crates/codex-native/src/: main.rs  shell.rs
packaging/aur/: .SRCINFO  PKGBUILD  README.md  codex-native-launcher  codex-native.desktop
scripts/: bump-codex-frontend.sh  check-codex-upstream.sh  sync-aur-repo.sh
