[package]
name = "codex-native"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
codex-archive = { path = "../codex-archive" }
gio = "0.18"
glib = "0.18"
gtk = "0.18"
javascriptcore-rs = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }
serde_json = "1"
soup3 = "0.5"
tao = "0.34"
webkit2gtk = "2.0"
wry = "0.53"
